--- a/weatherapp/db/Dockerfile
+++ b/weatherapp/db/Dockerfile
@@ -2,15 +2,15 @@
 FROM mysql
 
 # # Optionally, set environment variables for MySQL configuration
-# ENV MYSQL_ROOT_PASSWORD=root_password
+ENV MYSQL_ROOT_PASSWORD=my-secret-pw
 # ENV MYSQL_DATABASE=sample_db
-# ENV MYSQL_USER=db_user
-# ENV MYSQL_PASSWORD=db_password
+ENV MYSQL_USER=db
+ENV MYSQL_PASSWORD=my-secret-pw
 
-# # Optionally, copy SQL scripts or initialization files
-# # COPY init.sql /docker-entrypoint-initdb.d/
+# Optionally, copy SQL scripts or initialization files
+# COPY init.sql /docker-entrypoint-initdb.d/
 
-# # Expose the default MySQL port
-# EXPOSE 3306
+# Expose the default MySQL port
+EXPOSE 3306
 
 
