--- a/weatherapp/auth/Dockerfile
+++ b/weatherapp/auth/Dockerfile
@@ -3,7 +3,7 @@ FROM golang:alpine AS builder
 RUN apk add git
 WORKDIR /go/src/app
 RUN git clone https://github.com/abohmeed/weatherapp.git
-WORKDIR /go/src/app/S5-SESSION/weatherapp/auth/src/main/main.go:38
+WORKDIR /go/src/app/weatherapp/auth
 RUN go build -o /go/bin/app -v ./...
 
 
