--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -1,4 +1,3 @@
-
 pipeline {
     agent {
         label("Dev")
@@ -88,12 +87,18 @@ pipeline {
             }
         }
 
-        stage('Login') {
+        stage('Login to Docker Registry') {
+            steps {
+                withCredentials([usernamePassword(credentialsId: 'DockerHub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
+                    script {
+                        def dockerHubUsername = env.DOCKERHUB_USERNAME
+                        def dockerHubPassword = env.DOCKERHUB_PASSWORD
 
-			steps {
-				sh 'echo $DOCKERHUB_CREDENTIALS_PSW | docker login -u $DOCKERHUB_CREDENTIALS_USR --password-stdin'
-			}
-		}
+                        sh "echo \$DOCKERHUB_PASSWORD | docker login --username \$DOCKERHUB_USERNAME --password-stdin"
+                    }
+                }
+            }
+        }
 
         stage('Build auth') {
             steps {
@@ -289,7 +294,7 @@ pipeline {
                       DB_HOST: db
                       DB_PASSWORD: ${WEATHERAPP_DB_PASSWORD}
                     expose:
-                      - 8082
+                      - 8080
                     networks:
                       - weatherapp
                     restart: always
@@ -301,7 +306,7 @@ pipeline {
                     image: nebstephy/weatherapp-ui:${BUILD_NUMBER}
                     environment:
                       AUTH_HOST: auth
-                      AUTH_PORT: 8082
+                      AUTH_PORT: 8080
                       WEATHER_HOST: weather
                       WEATHER_PORT: 5000
                       REDIS_USER: redis
