--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -253,7 +253,7 @@ version: '3.5'
 services:
   db:
     container_name: weatherapp-db
-    image: devopseasylearning/weatherapp-db:${BUILD_NUMBER}
+    image: nebstephy/weatherapp-db:${BUILD_NUMBER}
     environment:
       MYSQL_ROOT_PASSWORD: ${WEATHERAPP_MYSQL_ROOT_PASSWORD}
     volumes:
@@ -264,7 +264,7 @@ services:
   
   redis:
     container_name: weatherapp-redis
-    image: devopseasylearning/weatherapp-redis:${BUILD_NUMBER}
+    image: nebstephy/weatherapp-redis:${BUILD_NUMBER}
     networks:
       - weatherapp
     environment:
@@ -276,7 +276,7 @@ services:
 
   weather:
     container_name: weatherapp-weather
-    image: devopseasylearning/weatherapp-weather:${BUILD_NUMBER}
+    image: nebstephy/weatherapp-weather:${BUILD_NUMBER}
     expose:
       - 5000
     environment:
@@ -290,7 +290,7 @@ services:
 
   auth:
     container_name: weatherapp-auth
-    image: devopseasylearning/weatherapp-auth:${BUILD_NUMBER}
+    image: nebstephy/weatherapp-auth:${BUILD_NUMBER}
     environment:
       DB_HOST: db
       DB_PASSWORD: ${WEATHERAPP_DB_PASSWORD}
@@ -304,7 +304,7 @@ services:
 
   ui:
     container_name: weatherapp-ui
-    image: devopseasylearning/weatherapp-ui:${BUILD_NUMBER}
+    image: nebstephy/weatherapp-ui:${BUILD_NUMBER}
     environment:
       AUTH_HOST: auth
       AUTH_PORT: 8080
