--- a/weatherapp/Jenkinsfile
+++ b/weatherapp/Jenkinsfile
@@ -87,19 +87,19 @@ pipeline {
         //     }
         // }
 
-        stage('Login to Docker Registry') {
+        stage('Login to Docker') {
             steps {
-                withCredentials([usernamePassword(credentialsId: 'DockerHub', usernameVariable: 'DOCKERHUB_USERNAME', passwordVariable: 'DOCKERHUB_PASSWORD')]) {
-                    script {
-                        def dockerHubUsername = env.DOCKERHUB_USERNAME
-                        def dockerHubPassword = env.DOCKERHUB_PASSWORD
-
-                        sh "echo \$DOCKERHUB_PASSWORD | docker login --username \$DOCKERHUB_USERNAME --password-stdin"
+                script {
+                    // Docker login
+                    withCredentials([usernamePassword(credentialsId: 'DockerHub', passwordVariable: 'DOCKER_PASSWORD', usernameVariable: 'DOCKER_USERNAME')]) {
+                        sh "echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin"
                     }
+
                 }
             }
-        }
 
+        }
+        
         stage('Build auth') {
             steps {
                 sh '''
