--- a/weatherapp/db/Dockerfile
+++ b/weatherapp/db/Dockerfile
@@ -1,15 +1,15 @@
 # Use the official MySQL image as the base image
-FROM mysql
+FROM mysql:5.6
 
-ENV MYSQL_ROOT_PASSWORD=my-secret-pw
-ENV DB_PASSWORD=my-secret-pw
-ENV MYSQL_USER=odilia
-ENV MYSQL_PASSWORD=odilia
+# ENV MYSQL_ROOT_PASSWORD=my-secret-pw
+# ENV DB_PASSWORD=my-secret-pw
+# ENV MYSQL_USER=odilia
+# ENV MYSQL_PASSWORD=odilia
 
-# # Optionally, copy SQL scripts or initialization files
-# # COPY init.sql /docker-entrypoint-initdb.d/
+# # # Optionally, copy SQL scripts or initialization files
+# # # COPY init.sql /docker-entrypoint-initdb.d/
 
-# # Expose the default MySQL port
-EXPOSE 3306
+# # # Expose the default MySQL port
+# EXPOSE 3306
 
 
